--- a/modulo01/css/style.css
+++ b/modulo01/css/style.css
@@ -4,6 +4,8 @@
     font-family:monospace
 } */
 
+/* .texto-principal {color: goldenrod; text-align: center; padding: 25px;}
+
 *  {margin: 0; padding: 0;}
 
 h1 {
@@ -15,4 +17,21 @@ p {
 
 input[type="text"]{width: 150px; background-color: gray; height: 20px; border-radius: 10px;}
 input[type="email"]{width: 150px; background-color: gray; height: 20px; border-radius: 10px;}
-input[type="submit"]{width: 50px; background-color:darkgray; height: 20px; border-radius: 10px;}
+input[type="submit"]{width: 50px; background-color:darkgray; height: 20px; border-radius: 10px;} */
+
+/* #conteudo {
+    background-color: blanchedalmond; 
+    color: cornflowerblue;
+    padding: 20px;
+    max-width: 500px;
+} */
+
+#exemplo {
+    background-color:darkslategrey;
+    color:floralwhite;
+    width: 500px;
+    padding-top: 15px;
+    padding-right: 20px;
+    padding-left: 25px;
+    padding: 20px;
+}
