--- a/modulo01/css/style.css
+++ b/modulo01/css/style.css
@@ -1,3 +1,42 @@
+#conteudo {
+    background-color: grey;
+    width: 300px;
+    height: 120px;
+    overflow: auto;
+}
+
+/* #conteudo {
+    background-color: grey;
+    width: 300px;
+    padding: 25px;
+    box-shadow: 10px 10px 5px;
+} */
+
+/* p {
+    color:darkred;
+    text-transform: capitalize;
+    text-align: justify;
+    text-indent: 20px;
+    line-height: 25px;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+}
+
+h1 {
+    text-align: left; 
+    text-decoration: underline;
+    text-shadow: 3px 3px 4px rosybrown;
+}
+
+h2 {
+    text-align: right; 
+    text-decoration: overline;
+}
+
+h3 {
+    text-align: center; text-decoration: line-through;
+} */
+
 /* h1 {
     color:darkslategray;
     font-size: 45px;
@@ -11,6 +50,7 @@
 h1 {
     color: darkgoldenrod;
 }
+
 p {
     color: goldenrod;
 }
@@ -26,7 +66,7 @@ input[type="submit"]{width: 50px; background-color:darkgray; height: 20px; borde
     max-width: 500px;
 } */
 
-#exemplo {
+/* #exemplo {
     background-color:darkslategrey;
     color:floralwhite;
     width: 500px;
@@ -34,4 +74,4 @@ input[type="submit"]{width: 50px; background-color:darkgray; height: 20px; borde
     padding-right: 20px;
     padding-left: 25px;
     padding: 20px;
-}
+} */
