--- a/modulo01/css/style.css
+++ b/modulo01/css/style.css
@@ -1,9 +1,28 @@
-#conteudo {
+#cor {
+    background-color: #32b2b5;
+    height: 250px;
+    width: 250px;
+    border-radius: 15px;
+}
+
+/* #fonte {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 45px;
+} */
+
+/* #border {
+    height: 150px;
+    width: 275px;
+    border-radius: 20px 50px;
+    background-color: gray;
+} */
+
+/* #conteudo {
     background-color: grey;
     width: 300px;
     height: 120px;
     overflow: auto;
-}
+} */
 
 /* #conteudo {
     background-color: grey;
