--- a/modulo01/css/style.css
+++ b/modulo01/css/style.css
@@ -1,9 +1,33 @@
-#cor {
+#base {
+    background-color: gray;
+    width: 600px;
+    height: 600px;
+}
+#esquerda {
+    background-color: black;
+    width: 300px;
+    height: 300px;
+    float: left;
+}
+#direita {
+    background-color: orange;
+    width: 300px;
+    height: 300px;
+    float: right;
+}
+
+/* #corDiv {
+    width: 350px;
+    height: 250px;
+    background: linear-gradient(grey, black, orange)
+} */
+
+/* #cor {
     background-color: #32b2b5;
     height: 250px;
     width: 250px;
     border-radius: 15px;
-}
+} */
 
 /* #fonte {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
